--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
 								</manifest>
 							</archive>
 							<descriptorRefs>
-								<descriptorRef>executable-jar-with-dependencies</descriptorRef>
+								<descriptorRef>jar-with-dependencies</descriptorRef>
 							</descriptorRefs>
 						</configuration>
 					</execution>
@@ -89,12 +89,12 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.21.0</version>
+				<version>2.22.2</version>
 				<dependencies>
 					<dependency>
 						<groupId>org.junit.platform</groupId>
 						<artifactId>junit-platform-surefire-provider</artifactId>
-						<version>1.2.0</version>
+						<version>1.3.2</version>
 					</dependency>
 				</dependencies>
 				<configuration>
@@ -123,7 +123,7 @@
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.8.5</version>
+				<version>0.8.7</version>
 				<executions>
 					<execution>
 						<goals>
